Mejoramos api doc
